# Raytracer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENCE  README.md  index.html
.github/scripts/: jira-transition.sh
.github/workflows/: branch-merge-policy.yml  ci.yml  jira-on-merge.yml  jira-on-pr-open.yml
config/: complex.json  config4.json  cube.json  desk.json  example4.json  example5.json  exemple1.json  exemple2.json  exemple3.json  icosahedron.json  octahedron.json  prism.json
docs/: UI_PLAN.md  bvh.md
include/math/: Matrix.hpp
src/: CMakeLists.txt  Raytracer.cpp  main.cpp
src/DesignPattern/: CMakeLists.txt  FactoryTemplate.cpp
src/DesignPattern/include/: FactoryTemplate.hpp
src/accelerators/: BvhAggregate.cpp  CMakeLists.txt
src/accelerators/include/: BvhAggregate.hpp
src/cameras/: CMakeLists.txt  Film.cpp  ICamera.cpp  PerspectiveCamera.cpp
src/cameras/include/: Film.cpp  Film.hpp  ICamera.hpp  PerspectiveCamera.hpp
src/core/: CMakeLists.txt  main.cpp
src/core/include/: Raytracer.hpp
src/integrators/: CMakeLists.txt  IIntegrator.cpp  RecursiveIntegrator.cpp  SimpleIntegrator.cpp
src/integrators/include/: IIntegrator.hpp  RecursiveIntegrator.hpp  SimpleIntegrator.cpp  SimpleIntegrator.hpp
src/lights/: AmbientLight.cpp  AreaLight.cpp  CMakeLists.txt  DirectionalLight.cpp  ILight.cpp  PointLight.cpp
src/lights/include/: AmbientLight.hpp  AreaLight.hpp  DirectionalLight.hpp  ILight.hpp  PointLight.hpp
src/materials/: CMakeLists.txt  Dielectric.cpp  Emissive.cpp  FlatColor.cpp  IMaterial.cpp  Lambertian.cpp  Metal.cpp
src/materials/include/: Dielectric.hpp  Emissive.hpp  FlatColor.hpp  IMaterial.hpp  Lambertian.hpp  Metal.hpp
src/maths/: Bounds2.cpp  Bounds3.cpp  CMakeLists.txt  Color.cpp  Matrix.cpp  Matrix4x4.cpp  Normal.cpp  Point.cpp  Ray.cpp  Transform.cpp  TransformationMatrices.cpp  Vector.cpp  maths.cpp
src/maths/include/: Bounds2.hpp  Bounds2.tpp  Bounds3.hpp  Bounds3.tpp  Color.hpp  Color.tpp  Matrix.hpp  Matrix.tpp  Matrix4x4.hpp  Normal.hpp  Normal.tpp  Point.hpp  Point.tpp  Ray.hpp  Ray.tpp  Transform.hpp  Transform.tpp  Vector.hpp  Vector.tpp  Vector2.hpp  Vector2.tpp  Vector3.hpp  Vector3.tpp  maths.hpp  maths_types.hpp
src/scene/: CMakeLists.txt  Scene.cpp  SceneBuilder.cpp
src/scene/include/: Scene.hpp  SceneBuilder.hpp
src/shapes/: CMakeLists.txt  Cone.cpp  Cylinder.cpp  Disk.cpp  GeometricPrimitive.cpp  IPrimitive.cpp  IShape.cpp  Plane.cpp  Sphere.cpp  Triangle.cpp
src/shapes/include/: Cone.hpp  Cylinder.hpp  Disk.hpp  GeometricPrimitive.hpp  IPrimitive.hpp  IShape.hpp  Plane.hpp  Sphere.cpp  Sphere.hpp  Triangle.hpp
src/utils/: CMakeLists.txt  Serializer.cpp  json.cpp
src/utils/include/: Serializer.hpp
tests/: CMakeLists.txt  hello_test.cpp  json.cpp
tests/maths/: Matrix4x4Tests.cpp  PointTests.cpp  RayTests.cpp  TransformTests.cpp  VectorTests.cpp
